# substrate-api-client

./: Cargo.toml  rename-crates-for-2.0.sh
src/: lib.rs  node_metadata.rs
src/examples/: example_contract.rs  example_event_callback.rs
src/extrinsic/: balances.rs  contract.rs  mod.rs
src/rpc/: client.rs
test_no_std/: Cargo.toml
tutorials/api-client-tutorial/: Cargo.toml
tutorials/api-client-tutorial/src/: main.rs
