[package]
name = "substrate-api-client"
version = "2.0.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[dependencies]
env_logger      = { version = "0.7", optional = true }
ws              = { version = "0.7", optional = true }
hex             = { version = "0.4", default-features=false, optional = true }
log             = { version = "0.4", optional = true }
serde           = { version = "1.0", optional = true, features = ["derive"] }
serde_json      = { version = "1.0", optional = true }
primitive-types = { version = "0.6", default-features = false, features = ["codec"] }

[dependencies.primitives]
git = "https://github.com/paritytech/substrate"
rev = "584d3752928015d6e3e51333f89a9ac5b90702db"
package = "sp-core"
default-features = false
features = ["full_crypto"]

[dependencies.codec]
package = "parity-scale-codec"
features = ["derive"]
version = "1.0.0"
default-features = false

[dependencies.indices]
git = "https://github.com/paritytech/substrate"
rev = "584d3752928015d6e3e51333f89a9ac5b90702db"
package = "pallet-indices"
default-features=false

[dependencies.runtime-io]
git = "https://github.com/paritytech/substrate"
rev = "584d3752928015d6e3e51333f89a9ac5b90702db"
package = "sp-io"
default-features=false

[dependencies.metadata]
git = "https://github.com/paritytech/substrate"
rev = "584d3752928015d6e3e51333f89a9ac5b90702db"
package = "frame-metadata"
default-features=false

[dependencies.runtime-version]
git = "https://github.com/paritytech/substrate"
rev = "584d3752928015d6e3e51333f89a9ac5b90702db"
package = "sp-version"
default-features=false

[dependencies.balances]
git = "https://github.com/paritytech/substrate"
rev = "584d3752928015d6e3e51333f89a9ac5b90702db"
package = "pallet-balances"
default-features=false

[dependencies.system]
git = "https://github.com/paritytech/substrate"
rev = "584d3752928015d6e3e51333f89a9ac5b90702db"
package = "frame-system"
default-features=false

[dependencies.runtime-primitives]
git = "https://github.com/paritytech/substrate"
rev = "584d3752928015d6e3e51333f89a9ac5b90702db"
package = "sp-runtime"
default-features=false

[dependencies.runtime-support]
git = "https://github.com/paritytech/substrate"
rev = "584d3752928015d6e3e51333f89a9ac5b90702db"
package = "frame-support"
default-features=false

[dependencies.rstd]
git = "https://github.com/paritytech/substrate"
rev = "584d3752928015d6e3e51333f89a9ac5b90702db"
package = "sp-std"
default-features = false

[dev-dependencies.node-runtime]
git = "https://github.com/paritytech/substrate"
rev = "584d3752928015d6e3e51333f89a9ac5b90702db"
package = "node-runtime"

[dependencies.node-primitives]
git = "https://github.com/paritytech/substrate"
rev = "584d3752928015d6e3e51333f89a9ac5b90702db"
package = "node-primitives"
default-features=false

[dev-dependencies.contracts]
git = "https://github.com/paritytech/substrate"
rev = "584d3752928015d6e3e51333f89a9ac5b90702db"
package = "pallet-contracts"

[dev-dependencies]
wabt = "0.9.0"

[dev-dependencies.keyring]
git = "https://github.com/paritytech/substrate"
rev = "584d3752928015d6e3e51333f89a9ac5b90702db"
package = "sp-keyring"

[dev-dependencies.clap] 
version = "2.33"
features = ["yaml"] 

[features]
default = ["std"]
std = [
	"primitives/std",
	"codec/std",
    "runtime-primitives/std",
	"runtime-support/std",
	"runtime-primitives/std",
	"system/std",
	"balances/std",
	"runtime-version/std",
	"metadata/std",
	"runtime-io/std",
	"indices/std",
	"primitives/std",
	"serde/std",
	"serde_json",
	"env_logger",
	"log",
	"ws",
	"hex",
	"node-primitives/std",
]
# need to add this for the app_crypto macro
full_crypto = []



# [patch.crates-io]
# ed25519-dalek = { git = "https://github.com/scs/ed25519-dalek.git", branch = "no_std_sgx"}
